--- a/GCR.Web/Content/Site.css
+++ b/GCR.Web/Content/Site.css
@@ -17,9 +17,10 @@ body {
 #inner-body {
   min-height: 1200px;
   background: transparent url(images/background.jpg) center top repeat-x;
+  padding-bottom: 50px;
 }
 #header {
-  padding: 20px 0px 20px 0px;
+  padding: 30px 0px 40px 0px;
   position: relative;
   width: 960px;
   margin: 0 auto;
