--- a/GCR.Web/Content/site.less
+++ b/GCR.Web/Content/site.less
@@ -67,11 +67,12 @@ body
 {
 	min-height: 1200px;
 	background: transparent url(images/background.jpg) center top repeat-x;
+	padding-bottom:50px;
 }
 
 #header
 {
-	padding: 20px 0px 20px 0px;
+	padding: 30px 0px 40px 0px;
 	position: relative; 
 	width: @grid-width; 
 	margin: 0 auto; 
