--- a/GCR.Web/Content/site.less
+++ b/GCR.Web/Content/site.less
@@ -25,7 +25,7 @@
 
 @accent-color: #0079ce;
 @accent-alt-color: #996699;
-@strong-color: #003473;
+@strong-color: #053472;
 @background-color: #010101;
 @main-color: #010101;
 @main-alt-color: #9c9ea5;
@@ -72,7 +72,7 @@ body
 
 #header
 {
-	padding: 30px 0px 40px 0px;
+	padding: 30px 0px;
 	position: relative; 
 	width: @grid-width; 
 	margin: 0 auto; 
@@ -96,35 +96,43 @@ h1, h2, h3, h4, h5, h6
 	font-family: 'Patua One', cursive;
 	font-weight: normal;
 }
-
-div.nav
+.est{
+	background-color:@strong-color; 
+	position:absolute; 
+	top: 0; 
+	right:0; 
+	padding:20px 10px 10px 10px;
+	font-size:1.2em;
+	font-weight:600;
+}
+.nav
 {
     border: 1px solid lighten(@footer-color, 40%);
-	margin-top:55px;
+	margin-top:23px;
 	.rounded-corners(1px);
 }
 
-div.nav ul{
+.nav ul{
     line-height: 1;
 }
-div.nav ul, .div.nav li {
+.nav ul, .nav li {
     list-style: none outside none;
     margin: 0;
     padding: 0;
 }
 
-div.nav  li {
+.nav  li {
     background: url('images/menu-border2.gif') no-repeat scroll 0 9px transparent;
     float: left;
     position: relative;
     text-align: center;
-    width: 130px;
+    width: 128px;
 }
-div.nav  li.alpha {
+.nav li.alpha {
     background: none;
 }
 
-div.nav a {
+.nav a {
     color: @font-alt-color;
 	text-decoration:none;
     display: block;
@@ -136,7 +144,7 @@ div.nav a {
 	text-transform:uppercase;
 }
 
-div.nav .highlite {
+.nav .highlite {
 	background-color: @accent-color;
 	height:5px;
 	opacity:0;
@@ -147,20 +155,19 @@ div.nav .highlite {
 	-o-transition:opacity 0.4s; /* Opera */
 }
 
-div.nav li:hover .highlite, div.nav li.on .highlite {
+.nav li:hover .highlite, .nav li.on .highlite {
 	opacity:1;
 	visibility:visible;
 }
 
-div.fb
+.fb
 {
     vertical-align: middle;
 	font-weight: 600;
-    text-align: right;
-	margin-top: 20px;
+	margin-top: 30px;
 }
 
-div.fb span, div.fb img
+.fb span, .fb img
 {
 	vertical-align:middle;
 }
