--- a/GCR.Web/Views/Shared/_Layout.cshtml
+++ b/GCR.Web/Views/Shared/_Layout.cshtml
@@ -13,10 +13,11 @@
         <div id="inner-body">
             <div id="header">
                 <div class="content-wrapper clearfix">
-                    <div style="float: right;">
+                    <div style="float: right;">  
+                        <div class="est">Established 1981</div>
                         <div class="fb">
-                            <span>Follow us on facebook</span>&nbsp;
-                            <img src="~/Content/images/fb.png" />
+                            <img src="~/Content/images/fb.png" />&nbsp;  
+                            <span>Follow us on facebook</span>&nbsp;   
                         </div>
                         <div class="nav">
                             <ul class="clearfix">
@@ -33,7 +34,7 @@
                             </ul>
                         </div>
                     </div>
-                    <img src="~/Content/images/logo.png" style="height: 180px; width: 225px" />
+                    <img src="~/Content/images/logo2.png" style="" />
                 </div>
             </div>
             <div class="container">
