--- a/GCR.Web/Content/_base.css
+++ b/GCR.Web/Content/_base.css
@@ -834,9 +834,10 @@ body {
 #inner-body {
   min-height: 1200px;
   background: transparent url(images/background.jpg) center top repeat-x;
+  padding-bottom: 50px;
 }
 #header {
-  padding: 20px 0px 20px 0px;
+  padding: 30px 0px;
   position: relative;
   width: 960px;
   margin: 0 auto;
@@ -859,33 +860,42 @@ h6 {
   font-family: 'Patua One', cursive;
   font-weight: normal;
 }
-div.nav {
+.est {
+  background-color: #053472;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 20px 10px 10px 10px;
+  font-size: 1.2em;
+  font-weight: 600;
+}
+.nav {
   border: 1px solid #868686;
-  margin-top: 55px;
+  margin-top: 23px;
   -moz-border-radius: 1px;
   -webkit-border-radius: 1px;
   border-radius: 1px;
 }
-div.nav ul {
+.nav ul {
   line-height: 1;
 }
-div.nav ul,
-.div.nav li {
+.nav ul,
+.nav li {
   list-style: none outside none;
   margin: 0;
   padding: 0;
 }
-div.nav li {
+.nav li {
   background: url('images/menu-border2.gif') no-repeat scroll 0 9px transparent;
   float: left;
   position: relative;
   text-align: center;
-  width: 130px;
+  width: 128px;
 }
-div.nav li.alpha {
+.nav li.alpha {
   background: none;
 }
-div.nav a {
+.nav a {
   color: #fafafa;
   text-decoration: none;
   display: block;
@@ -896,7 +906,7 @@ div.nav a {
   position: relative;
   text-transform: uppercase;
 }
-div.nav .highlite {
+.nav .highlite {
   background-color: #0079ce;
   height: 5px;
   opacity: 0;
@@ -912,19 +922,18 @@ div.nav .highlite {
   /* Opera */
 
 }
-div.nav li:hover .highlite,
-div.nav li.on .highlite {
+.nav li:hover .highlite,
+.nav li.on .highlite {
   opacity: 1;
   visibility: visible;
 }
-div.fb {
+.fb {
   vertical-align: middle;
   font-weight: 600;
-  text-align: right;
-  margin-top: 20px;
+  margin-top: 30px;
 }
-div.fb span,
-div.fb img {
+.fb span,
+.fb img {
   vertical-align: middle;
 }
 /* Styles for validation helpers
