--- a/GCR.Web/Content/site.less
+++ b/GCR.Web/Content/site.less
@@ -172,6 +172,43 @@ h1, h2, h3, h4, h5, h6
 	vertical-align:middle;
 }
 
+.top-shadow
+{
+	background: url('/Content/images/top-shadow.png') left top repeat-x; 
+	height:25px; position:absolute; 
+	top:0;
+	left:0;
+	right:0;
+}
+.bottom-shadow
+{
+	background: url('/Content/images/bottom-shadow.png') left bottom repeat-x; 
+	height:25px; position:absolute; 
+	bottom:0;
+	left:0;
+	right:0;
+}
+.left-shade
+{
+	background: url('/Content/images/shade.png') left top repeat; 
+	height:450px; 
+	width:960px;
+	position:absolute; 
+	top:0;
+	left:50%;
+	margin-left:-1440px;
+}
+.right-shade
+{
+	background: url('/Content/images/shade.png') left top repeat; 
+	height:450px; 
+	width:960px;
+	position:absolute; 
+	top:0;
+	left:50%;
+	margin-left:480px;
+}
+
 /* Styles for validation helpers
 -----------------------------------------------------------*/
 .field-validation-error {
