--- a/GCR.Web/Views/Shared/_Layout.cshtml
+++ b/GCR.Web/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     <img src="~/Content/images/logo2.png" style="" />
                 </div>
             </div>
-            @RenderSection("home", required: false);
+            @RenderSection("home", required: false)
             <div class="container">
                 @RenderBody()
             </div>
