--- a/GCR.Web/Content/skin.css
+++ b/GCR.Web/Content/skin.css
@@ -1,55 +1,64 @@
-.jcarousel-skin-custom {
-	height:450px; 
-    overflow:hidden;
-	margin-bottom:20px;
+.jcarousel-skin-custom
+{
+    height: 450px;
+    overflow: hidden;
 }
-.jcarousel-skin-custom li { float:left;}
 
-.jcarousel-container{left:50%;margin-left:-1440px}
+.jcarousel-skin-custom li
+{
+    float: left;
+}
 
-.jcarousel-skin-custom .jcarousel-clip-horizontal {
+.jcarousel-container
+{
+    left: 50%;
+    margin-left: -1440px;
+}
+
+.jcarousel-skin-custom .jcarousel-clip-horizontal
+{
     height: 450px;
 }
 
-.jcarousel-skin-custom .jcarousel-item {
+.jcarousel-skin-custom .jcarousel-item
+{
     width: 960px;
     height: 450px;
-	position:relative;
-}
-.jcarousel-skin-custom .jcarousel-item span{ display:block; height:450px; width:960px; position:absolute; background:url(images/carousel_item.png) repeat; z-index:999;}
-.jcarousel-item.current{ opacity:1 !important;}
-.jcarousel-item.current span{ display:none !important;}
-.jcarousel-skin-custom .jcarousel-item-horizontal {
-	margin: 0;
+    position: relative;
 }
 
-/**
- *  Horizontal Buttons
- */
-.jcarousel-skin-custom .jcarousel-next-horizontal {
+.jcarousel-skin-custom .jcarousel-item-horizontal
+{
+    margin: 0;
+}
+
+.jcarousel-skin-custom .jcarousel-next-horizontal
+{
     position: absolute;
-    bottom:210px;
-    left:0;
-	margin-left:1880px;
+    bottom: 210px;
+    left: 0;
+    margin-left: 1880px;
     width: 35px;
     height: 35px;
     cursor: pointer;
-    background:url(images/carousel_next.png) no-repeat 0 top;
-	z-index:999;
+    background: url(images/carousel_next.png) no-repeat 0 top;
+    z-index: 2;
 }
 
-.jcarousel-skin-custom .jcarousel-prev-horizontal {
+.jcarousel-skin-custom .jcarousel-prev-horizontal
+{
     position: absolute;
-	z-index:999;
-    bottom:210px;
+    z-index: 2;
+    bottom: 210px;
     width: 35px;
-	left:0;
-	margin-left:965px;
+    left: 0;
+    margin-left: 965px;
     height: 35px;
     cursor: pointer;
-    background:url(images/carousel_prev.png) no-repeat 0 top;
+    background: url(images/carousel_prev.png) no-repeat 0 top;
 }
 
-.jcarousel-skin-custom .jcarousel-next-horizontal:hover, .jcarousel-skin-custom .jcarousel-prev-horizontal:hover {
-	background-position: 0 bottom;
+.jcarousel-skin-custom .jcarousel-next-horizontal:hover, .jcarousel-skin-custom .jcarousel-prev-horizontal:hover
+{
+    background-position: 0 bottom;
 }
