--- a/GCR.Web/Views/Home/Index.cshtml
+++ b/GCR.Web/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 @section home {
-<div style="position:relative; overflow:hidden">
-<ul id="mycarousel" class="jcarousel-skin-custom">
+<div style="position:relative; overflow:hidden;	margin-bottom:20px;">
+<ul id="mycarousel" class="jcarousel-skin-homepage">
         <li><img src="~/Content/images/slide5.jpg" width="960" height="450" alt=""></li>
         	<li class="current"><img src="~/Content/images/slide1.jpg" width="960" height="450" alt=""></li>
             <li><img src="~/Content/images/slide6.jpg" width="960" height="450" alt=""></li>
