--- a/GCR.Web/Views/Shared/_Layout.cshtml
+++ b/GCR.Web/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <div id="body">
         <div id="inner-body">
             <div id="header">
-                <div class="content-wrapper clearfix">
+                <div class="clearfix">
                     <div style="float: right;">  
                         <div class="est">Established 1981</div>
                         <div class="fb">
