--- a/GCR.Web/Content/site.less
+++ b/GCR.Web/Content/site.less
@@ -209,8 +209,7 @@ h1, h2, h3, h4, h5, h6
 	margin-left:480px;
 }
 
-/* Styles for validation helpers
------------------------------------------------------------*/
+/* Styles for validation helpers */
 .field-validation-error {
 	color: @error-font;
 }
@@ -374,6 +373,70 @@ div.info a
 	background: url('images/Error32.png') no-repeat 10px center;
 }
 
-/* End styles for validation helpers
------------------------------------------------------------*/
+/* End styles for validation helpers */
+
+/* jcarousel home page theme */
+.jcarousel-skin-homepage
+{
+    height: 450px;
+    overflow: hidden;
+}
+
+.jcarousel-skin-homepage li
+{
+    float: left;
+}
+.jcarousel-skin-homepage .jcarousel-container
+{
+    left: 50%;
+    margin-left: -1440px;
+}
+
+.jcarousel-skin-homepage .jcarousel-clip-horizontal
+{
+    height: 450px;
+}
+
+.jcarousel-skin-homepage .jcarousel-item
+{
+    width: 960px;
+    height: 450px;
+    position: relative;
+}
+
+.jcarousel-skin-homepage .jcarousel-item-horizontal
+{
+    margin: 0;
+}
+
+.jcarousel-skin-homepage .jcarousel-next-horizontal
+{
+    position: absolute;
+    bottom: 210px;
+    left: 0;
+    margin-left: 1880px;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    background: url(images/carousel_next.png) no-repeat 0 top;
+    z-index: 2;
+}
+
+.jcarousel-skin-homepage .jcarousel-prev-horizontal
+{
+    position: absolute;
+    z-index: 2;
+    bottom: 210px;
+    width: 35px;
+    left: 0;
+    margin-left: 965px;
+    height: 35px;
+    cursor: pointer;
+    background: url(images/carousel_prev.png) no-repeat 0 top;
+}
+
+.jcarousel-skin-homepage .jcarousel-next-horizontal:hover, .jcarousel-skin-homepage .jcarousel-prev-horizontal:hover
+{
+    background-position: 0 bottom;
+}
 
