--- a/GCR.Web/Views/Shared/_Layout.cshtml
+++ b/GCR.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/base/css")
-<link rel="stylesheet" type="text/css" href="~/Content/skin.css" />
 </head>
 <body>
     <div id="body">
@@ -35,7 +34,7 @@
                             </ul>
                         </div>
                     </div>
-                    <img src="~/Content/images/logo2.png" style="" />
+                    <img src="~/Content/images/logo.png" style="" />
                 </div>
             </div>
             @RenderSection("home", required: false)
