--- a/GCR.Web/Content/site.less
+++ b/GCR.Web/Content/site.less
@@ -122,7 +122,7 @@ h1, h2, h3, h4, h5, h6
 }
 
 .nav  li {
-    background: url('images/menu-border2.gif') no-repeat scroll 0 9px transparent;
+    background: url('images/menu-border.gif') no-repeat scroll 0 9px transparent;
     float: left;
     position: relative;
     text-align: center;
@@ -150,9 +150,9 @@ h1, h2, h3, h4, h5, h6
 	opacity:0;
 	visibility:hidden;
 	transition:opacity 0.4s;
-	-moz-transition:opacity 0.4s; /* Firefox 4 */
-	-webkit-transition:opacity 0.4s; /* Safari and Chrome */
-	-o-transition:opacity 0.4s; /* Opera */
+	-moz-transition:opacity 0.4s;
+	-webkit-transition:opacity 0.4s;
+	-o-transition:opacity 0.4s;
 }
 
 .nav li:hover .highlite, .nav li.on .highlite {
@@ -412,31 +412,75 @@ div.info a
 .jcarousel-skin-homepage .jcarousel-next-horizontal
 {
     position: absolute;
-    bottom: 210px;
-    left: 0;
-    margin-left: 1880px;
+    top: 30px;
+    right: 5px;
     width: 35px;
     height: 35px;
     cursor: pointer;
     background: url(images/carousel_next.png) no-repeat 0 top;
-    z-index: 2;
+	opacity: 0.5;
+	transition:opacity 0.5s;
+	-moz-transition:opacity 0.5s;
+	-webkit-transition:opacity 0.5s;
+	-o-transition:opacity 0.5s;
 }
 
 .jcarousel-skin-homepage .jcarousel-prev-horizontal
 {
     position: absolute;
-    z-index: 2;
-    bottom: 210px;
+    top: 30px;
+	left: 5px;
     width: 35px;
-    left: 0;
-    margin-left: 965px;
     height: 35px;
     cursor: pointer;
-    background: url(images/carousel_prev.png) no-repeat 0 top;
+    background: url(images/carousel_previous.png) no-repeat 0 top;
+	opacity: 0.5;
+	transition:opacity 0.5s;
+	-moz-transition:opacity 0.5s;
+	-webkit-transition:opacity 0.5s;
+	-o-transition:opacity 0.5s;
 }
 
+.jcarousel-skin-homepage .jcarousel-reveal-next
+{
+    position: absolute;
+    bottom: 180px;
+    left: 0;
+    margin-left: 1850px;
+    width: 70px;
+    height: 95px;
+    z-index: 2;
+	background: url(images/transparent.gif) repeat left top;
+	opacity: 0.3;
+	transition:opacity 0.5s;
+	-moz-transition:opacity 0.5s;
+	-webkit-transition:opacity 0.5s;
+	-o-transition:opacity 0.5s;
+}
+
+.jcarousel-skin-homepage .jcarousel-reveal-prev
+{
+    position: absolute;
+    bottom: 180px;
+    left: 0;
+    margin-left: 960px;
+    width: 70px;
+    height: 95px;
+    z-index: 2;
+	background: url(images/transparent.gif) repeat left top;
+	opacity: 0.3;
+	transition:opacity 0.5s;
+	-moz-transition:opacity 0.5s;
+	-webkit-transition:opacity 0.5s;
+	-o-transition:opacity 0.5s;
+}
+
+.jcarousel-skin-homepage .jcarousel-reveal-next:hover, .jcarousel-skin-homepage .jcarousel-reveal-prev:hover
+{
+    opacity: 1;
+}
 .jcarousel-skin-homepage .jcarousel-next-horizontal:hover, .jcarousel-skin-homepage .jcarousel-prev-horizontal:hover
 {
-    background-position: 0 bottom;
+    opacity: 0.8;
 }
 
